# rust-bridge-game

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  gui_client.rs  gui_create_room.rs  gui_error.rs  gui_lobby.rs  gui_login.rs  gui_notification.rs  gui_play.rs  gui_room.rs  main.rs  notifications.rs  utils.rs
client/src/gui/: create_room.rs  lobby.rs  login.rs  mod.rs  play.rs  room.rs
common/: Cargo.toml
common/src/: bid.rs  card.rs  game.rs  lib.rs  message.rs  player.rs  room.rs  user.rs
common/tests/: bid.rs  bid_type.rs  card.rs  game.rs  player.rs  rank.rs  suit.rs
old_client/: Cargo.toml
old_client/src/: main.rs
server/: Cargo.toml
server/src/: handlers.rs  main.rs  state.rs  utils.rs
web_client/: index.html  main.js  style.css  testing.html  testing.js
