[package]
name = "old_client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
rust_socketio = { version = "0.6.0", features = ["async"] }
futures-util = "0.3.31"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"